--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.3.2",
     "@notionhq/client": "^2.2.15",
+    "formik": "^2.4.6",
     "next": "13.3.2",
     "react": "18.2.0",
     "react-bootstrap": "^1.6.1",
